header z-index fix

--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -12,6 +12,7 @@
  background-color: var(--header-bg-cl);
  border-bottom: 1px solid var(--ca-white-80);
  transform: translateY(calc(-1 * var(--header-default-h)));
+ z-index: 100;
  @include transition(transform .75s, background-color .75s);
 
  &--show {
